<resources>
    <string name="app_name">Eletric Car</string>
    <string name="eletric_car">Eletric Car</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="imagecar">ImageCar</string>
    <string name="r_300_000_00">R$ 300.000,00</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="kWh">93,4 kWh</string>
    <string name="potencia">Potência</string>
    <string name="cv">646 cv</string>
    <string name="recarga">Recarga</string>
    <string name="min">23 min</string>
    <string name="preco_kwh">Preço kWh</string>
    <string name="capacidade_bateria">Capacidade da Bateria</string>
    <string name="calcular">Calcular</string>
    <string name="custo_por_recarga">Custo Por Recarga Completa</string>
</resources>